# PEA_Simulated_Annealing

./: CMakeLists.txt  Menu.cpp  Menu.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  includes.h  main.cpp
Dane/: 17.tsp  21.tsp  29.tsp  output.csv  pliczki ten.txt  settings.ini
